fix btn collapse

--- a/assets/css/anest/index.css
+++ b/assets/css/anest/index.css
@@ -127,7 +127,7 @@
     margin: 0 auto;
     transition: .5s ease-in-out;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 14px;
 }
 
 .hamburger-menu .icon-bar {
@@ -135,7 +135,7 @@
     height: 2px;
     border-radius: 1px;
     background-color: #e6e6e6;
-    width: 34px;
+    width: 35px;
     transition: all 0.25s ease;
 }
 
